fix header z-index issue

--- a/manifest/source/header.less
+++ b/manifest/source/header.less
@@ -13,6 +13,8 @@ header {
 
 	.container-fluid {
 		padding: 0px 30px;
+		position: relative;
+    	z-index: 1;
 	}
 
 	.logo {
